--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
     justify-content: center;
     align-items: center;
     gap: 30px;
-    margin-left: 300px;
-    width: 50vw;
+    margin-left: 100px;
+    width: 66vw;
 }
 
 .navbarItem {
@@ -43,7 +43,6 @@ body {
 .navbarItem:hover {
     color: #fff;
     font-size: 22px;
-
 }
 
 .navbarItem a:hover {
@@ -144,9 +143,10 @@ body {
     position: absolute;
     top: 25%;
     padding: 0 60px;
+
 }
 
-.main .carts .cart {
+.cart {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -157,21 +157,52 @@ body {
     height: 50vh;
     border-radius: 10px;
     width: 26vw;
+    transition: 300ms ease-in-out;
+}
+
+.cart:not(.active) {
+    opacity: 0;
 }
 
 .cardİmg {
+    display: flex;
+    margin-top: 40px;
     margin-bottom: 80px;
+    justify-content: center;
 }
 
 .cart .cardHeader {
     font-size: 22px;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .cart .cardDescription {
     font-size: 16px;
     color: #84878e;
+}
+
+
+.slickPrev,
+.slickNext {
+    font-size: 24px;
+    color: #fff;
+    background: #31304D;
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.slickPrev {
+    left: 10px;
+}
+
+.slickNext {
+    right: 10px;
 }
 
 /*ana sayfadaki main bitirildi */
@@ -384,7 +415,6 @@ h4 {
     flex-direction: column;
     margin-bottom: 20px;
     align-items: flex-start;
-    /* Eklenen satır: Etiket ve giriş alanlarını sola hizala */
 }
 
 .formElementLabel {
@@ -398,7 +428,6 @@ h4 {
     border-radius: 5px;
     font-size: 16px;
     width: 30vw;
-    /* Eklenen satır: Giriş alanını genişliği kadar genişlet */
 }
 
 .submitButton {
@@ -415,4 +444,103 @@ h4 {
 .submitButton:hover {
     background-color: #161A30;
 
+}
+
+.rating {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.rating p {
+    margin: 0;
+}
+
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 5px;
+    position: relative;
+}
+
+.rate:not(:checked)>input {
+    position: absolute;
+    top: -9999px;
+}
+
+.rate:not(:checked)>label {
+    float: right;
+    width: 1.2em;
+    overflow: hidden;
+    cursor: pointer;
+    font-size: 36px;
+    color: #ccc;
+}
+
+.rate:not(:checked)>label:before {
+    content: '★ ';
+}
+
+.rate>input:checked~label {
+    color: #ffc700;
+}
+
+.rate:not(:checked)>label:hover,
+.rate:not(:checked)>label:hover~label {
+    color: #deb217;
+}
+
+.rate>input:checked+label:hover,
+.rate>input:checked+label:hover~label,
+.rate>input:checked~label:hover,
+.rate>input:checked~label:hover~label,
+.rate>label:hover~input:checked~label {
+    color: #c59b08;
+}
+
+/*Weather.html Css Başlangıcı*/
+
+.weatherInput {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#searchBar {
+    padding: 10px;
+    font-size: 18px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
+
+.weatherContent {
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+    margin-bottom: 25vh;
+
+}
+
+.city {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.temp {
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+
+.desc {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.minMax {
+    font-size: 18px;
 }
